--- a/study_Portal/templates/login.html
+++ b/study_Portal/templates/login.html
@@ -13,7 +13,7 @@
       {{form}}
     </fieldset>
     <div class="form-group">
-      <button href='' class='btn' type='submit'>Sign In</button>
+      <button href="./home.html" class='btn' type='submit'>Sign In</button>
     </div>
   </form>
     <div class="form-group">
